# lattice

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
apps/lattice-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/lattice-desktop/src-tauri/capabilities/: default.json
apps/lattice-desktop/src-tauri/icons/: icon.icns
apps/lattice-desktop/src-tauri/scripts/: dev.ps1
apps/lattice-desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
apps/lattice-docs/: .gitignore  .vercelignore  DEPLOY.md  LICENSE  README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json  vercel.json
apps/lattice-docs/public/: robots.txt
apps/lattice-docs/scripts/: sync-usage.ps1  sync.mjs
apps/lattice-docs/src/: content.config.ts  middleware.ts
apps/lattice-docs/src/content/docs/: changelog.mdx  index.mdx
apps/lattice-docs/src/pages/: sign-in.astro
apps/lattice-docs/src/pages/admin/: index.astro
apps/lattice-docs/src/pages/api/admin/: tokens.ts
apps/lattice-docs/src/pages/api/admin/tokens/: [id].ts
apps/lattice-docs/src/pages/invite/: [token].astro
apps/lattice-docs/src/styles/: fonts.css  lattice-theme.css
apps/lattice-web/: Cargo.toml  README.md  Trunk.toml  csp.json  index.html  package.json  styles.css  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/lattice-web/public/: .gitkeep
apps/lattice-web/scripts/: build-wasm.ps1  build.ps1  check.ps1  serve.ps1  sri-pin.mjs  verify-csp.mjs
apps/lattice-web/src/: App.tsx  api.rs  app.rs  capabilities.rs  chat.rs  chat_state.rs  distrust.rs  lattice.d.ts  main.rs  main.tsx  notify.rs  passkey.rs  persist.rs  storage.rs  styles.css  tauri.rs  ws_subscribe.rs
crates/lattice-cli/: Cargo.toml
crates/lattice-cli/src/: client.rs  identity_file.rs  main.rs  store.rs
crates/lattice-core/: Cargo.toml
crates/lattice-core/src/: lib.rs  wasm.rs
crates/lattice-crypto/: Cargo.toml
crates/lattice-crypto/src/: aead.rs  constants.rs  credential.rs  fingerprint.rs  hybrid_kex.rs  identity.rs  lib.rs  mls.rs  padding.rs  sealed_sender.rs
crates/lattice-crypto/src/mls/: cipher_suite.rs  identity_provider.rs  leaf_node_kem.rs  psk.rs  welcome_pq.rs
crates/lattice-crypto/tests/: mls_integration.rs
crates/lattice-keytransparency/: Cargo.toml
crates/lattice-keytransparency/src/: lib.rs
crates/lattice-media/: Cargo.toml  README.md
crates/lattice-media/src/: call.rs  constants.rs  error.rs  handshake.rs  ice.rs  lib.rs  rendezvous.rs  srtp.rs
crates/lattice-media/src/keystore/: linux.rs  macos.rs  memory.rs  mod.rs  windows.rs  windows_tpm.rs
crates/lattice-media/tests/: ice_loopback.rs  keystore_trait_object.rs  orchestrator_loopback.rs  pq_dtls_srtp_loopback.rs  pq_handshake_round_trip.rs
crates/lattice-protocol/: Cargo.toml  build.rs
crates/lattice-protocol/schema/: README.md  lattice.capnp
crates/lattice-protocol/src/: lattice_capnp.rs  lib.rs  sealed_sender.rs  server_state.rs  sig.rs  wire.rs
crates/lattice-server/: .env.example  Cargo.toml
crates/lattice-server/src/: config.rs  error.rs  lib.rs  main.rs  observability.rs  state.rs
crates/lattice-server/src/routes/: admin.rs  federation.rs  groups.rs  health.rs  identity.rs  mod.rs  push.rs  well_known.rs
crates/lattice-server/tests/: registration_v2.rs  routes_integration.rs
crates/lattice-storage/: Cargo.toml
crates/lattice-storage/src/: lib.rs
design/tokens/: colors.json  spacing.json  typography.json
docs/: ARCHITECTURE.md  DECISIONS.md  DEPLOY.md  HANDOFF.md  ROADMAP.md  THREAT_MODEL.md
docs/superpowers/plans/: 2026-05-16-registration-v2.md
docs/superpowers/specs/: 2026-05-16-registration-v2-design.md  2026-05-16-updater-design.md
docs/usage/: api-reference.md  development.md  federation.md  identity-and-keys.md  index.md  installation.md  messaging.md  quickstart.md  security-model.md  self-hosting.md  servers-and-channels.md  troubleshooting.md
packaging/arch/: PKGBUILD  README.md
scripts/: check-server.ps1  deploy-node.ps1  dev-setup.ps1  e2e-per-action.ps1  e2e-vertical-slice.ps1  env-setup.ps1  lattice-server.service.template  run-server-dev.ps1  test-all.ps1  verify-csp.ps1  verify-persistence.ps1
