[workspace]
resolver = "2"
members = [
    "crates/lattice-crypto",
    "crates/lattice-protocol",
    "crates/lattice-server",
    "crates/lattice-core",
    "crates/lattice-storage",
    "crates/lattice-keytransparency",
    "crates/lattice-media",
    "crates/lattice-cli",
    "apps/lattice-web",
    "apps/lattice-desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
authors = ["Matt Gates <matt@ridgecellrepair.com>"]
repository = "https://github.com/suhteevah/lattice"
homepage = "https://lattice.chat"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# Tracing — verbose logging is mandatory across every crate
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
bytes = "1"

# Post-quantum cryptography (NIST FIPS 203 / 204)
# ml-dsa is still in release-candidate; pin explicitly until 0.1.0 ships.
ml-kem = "0.2"
ml-dsa = "=0.1.0-rc.11"
# Classical primitives for hybrid mode
x25519-dalek = { version = "2", features = ["serde", "static_secrets"] }
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
# AEAD
chacha20poly1305 = "0.10"
# Hashing & KDF
sha2 = "0.10"
blake3 = "1"
hkdf = "0.12"
argon2 = "0.5"
# RNG
rand = "0.8"
rand_core = "0.6"
# Zeroize sensitive material
zeroize = { version = "1", features = ["zeroize_derive"] }
subtle = "2"

# MLS — group key agreement
# Versions kept in lockstep — mls-rs-crypto-rustcrypto's mls-rs-core dep
# must match the one mls-rs itself pulls in, otherwise CryptoProvider
# trait impls live in a different crate version and bound checks fail.
mls-rs = "0.55"
mls-rs-core = "0.27"
mls-rs-crypto-rustcrypto = "0.22"
# MLS TLS-style codec (used by custom Credential / extension serialization).
# Must match the version mls-rs-core re-exports as `mls_rs_core::mls_rs_codec`,
# otherwise the `MlsCodecExtension` trait bounds resolve through a different
# crate version and our derives "don't implement MlsEncode/MlsDecode".
mls-rs-codec = "0.7"

# QUIC transport
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"

# Wire framing — Prost was the interim format used through M2/M3/M4.
# Cap'n Proto schema landed in M5; both coexist until the wire-callsite
# swap is finished, then Prost will be removed.
prost = "0.13"
prost-types = "0.13"
capnp = "0.20"
capnpc = "0.20"

# HTTP / server framework
axum = { version = "0.8", features = ["macros", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "timeout"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "sqlite", "uuid", "chrono", "migrate"] }

# Config
config = "0.15"
dotenvy = "0.15"

# Validation
validator = { version = "0.19", features = ["derive"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Utilities
uuid = { version = "1", features = ["v4", "v7", "serde", "rng-getrandom", "js"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
base64 = "0.22"

# WASM bindings (used by lattice-core when compiled to wasm32)
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
# getrandom 0.4 (transitively pulled in by mls-rs's newer deps) requires
# the `wasm_js` feature to compile on wasm32-unknown-unknown. We export
# both 0.2 and 0.4 with their respective JS backend features so any
# crate in the tree can resolve a working RNG on browser targets.
getrandom_04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
# Pedantic lints we don't agree with workspace-wide:
# `doc_markdown`: rust-analyzer flags every TitleCase word in doc comments
#   as "should be in backticks"; the prose is correct as written and
#   sprinkling backticks for every type name in a paragraph hurts
#   readability.
# `similar_names`: crypto code uses pk/sk, ek/dk, ct/pt etc. by long-
#   standing convention. Renaming to dissimilar identifiers hurts
#   readability for anyone reading cryptographic literature.
# `significant_drop_tightening`: pedantic-nursery, often false-positive
#   on Mutex guards that we deliberately hold across short blocks.
doc_markdown = "allow"
similar_names = "allow"
significant_drop_tightening = "allow"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 1

[profile.bench]
opt-level = 3
lto = "fat"
debug = true
