[package]
name = "lattice-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Post-quantum hybrid cryptography for Lattice: hybrid KEX, ML-DSA identity, MLS groups, sealed sender, padding."

[lints]
workspace = true

[dependencies]
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_bytes.workspace = true

# Post-quantum
ml-kem.workspace = true
ml-dsa.workspace = true

# Classical hybrid
x25519-dalek.workspace = true
ed25519-dalek.workspace = true

# AEAD
chacha20poly1305.workspace = true

# Hash + KDF
sha2.workspace = true
blake3.workspace = true
hkdf.workspace = true
argon2.workspace = true

# RNG
rand.workspace = true
rand_core.workspace = true

# Memory hygiene
zeroize.workspace = true
subtle.workspace = true

# Hex / base64 for serialization
hex.workspace = true
base64.workspace = true

# MLS
mls-rs.workspace = true
mls-rs-core.workspace = true
mls-rs-crypto-rustcrypto.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
# Seeded RNG for deterministic test vectors
rand_chacha = "0.3"

[features]
default = []
# Enables JS-bound randomness so this crate compiles for wasm32-unknown-unknown.
wasm = ["getrandom/js"]

[dependencies.getrandom]
workspace = true
optional = true
