[package]
name = "lattice-media"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "M7 — voice/video for Lattice. PQ-hybrid DTLS-SRTP, ICE/STUN/TURN, and call signaling over MLS. See scratch/m7-build-plan.md."

[lints.rust]
# Workspace baseline is `forbid(unsafe_code)`. Demote to `deny` here so
# the Windows DPAPI FFI in `keystore::windows` can opt-in via a single
# `#[allow(unsafe_code)]` with documented `// SAFETY:` blocks per the
# CLAUDE.md FFI carve-out. Every other module in the crate stays
# unsafe-free.
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
doc_markdown = "allow"
similar_names = "allow"
significant_drop_tightening = "allow"

[dependencies]
# Verbose tracing is mandatory across every crate in the workspace.
tracing.workspace = true

# Domain errors via thiserror, infra via anyhow.
thiserror.workspace = true
anyhow.workspace = true

# Wire types for call signaling.
serde = { workspace = true, features = ["derive"] }
serde_bytes.workspace = true
bytes.workspace = true

# Post-quantum KEM — ML-KEM-768 secret folded into the SRTP key
# derivation per the PQ-hybrid construction in
# scratch/pq-dtls-srtp-construction.md.
ml-kem.workspace = true

# Classical primitives for the call-invite signature path.
ed25519-dalek.workspace = true

# KDF / hash for the SRTP master derivation.
hkdf.workspace = true
sha2.workspace = true

# Zeroize sensitive material.
zeroize.workspace = true
subtle.workspace = true

# RNG.
rand.workspace = true
rand_core.workspace = true

# Async runtime. Voice/video paths are inherently async because of
# the underlying webrtc-rs ecosystem; we expose async APIs to match.
tokio = { workspace = true, features = ["sync", "rt", "macros", "time"] }

# Lattice crates we depend on. Call signaling is just an
# `ApplicationMessage` payload variant, so we pull wire types from
# lattice-protocol; we don't run MLS ops here — that's lattice-crypto.
# lattice-crypto is added in M7 Phase G — the keystore module wraps
# identity::{generate_identity, sign, verify} behind a platform seal.
lattice-protocol = { path = "../lattice-protocol" }
lattice-crypto = { path = "../lattice-crypto" }

# JSON for the public-key sidecar files the WindowsKeystore writes
# alongside each sealed `.dpapi` blob.
serde_json = { workspace = true }

# Hex encoding for KeyHandle / public-key sidecars.
hex = { workspace = true }

# Platform directory discovery for the WindowsKeystore default
# location (`%LOCALAPPDATA%\Lattice\keystore`). Pulled unconditionally
# so the `MemoryKeystore`-only build path on non-Windows targets can
# still locate user-scoped state if needed in a later phase.
dirs = "5"

# webrtc-rs lower-level crates, pinned at v0.17.1 — the final
# feature release of the Tokio-coupled async line. Phase A research
# (scratch/webrtc-rs-api.md) found we can drive the call pipeline
# directly from these without going through `webrtc::RTCPeerConnection`,
# so we don't pull the top-level `webrtc` crate.
#
# Pinned versions:
#   * dtls v0.17.1 — note the crates.io name changed from `webrtc-dtls`
#     to `dtls`; the old name is stuck at 0.12.0.
#   * webrtc-srtp v0.17.1 — `Context::new(master_key, master_salt, …)`
#     accepts our HKDF-folded keys directly (D-18 amended 2026-05-11).
#   * webrtc-ice v0.17.1 — `Agent` drives candidate gathering;
#     candidates ride MLS application messages (Phase C wire types).
#   * webrtc-util v0.17.1 — `KeyingMaterialExporter` trait (the
#     dtls↔srtp seam) lives here.
#
# webrtc-mdns is intentionally omitted for now (LAN-only host
# candidate resolution; we always have STUN/TURN per D-19). Add if
# integration testing needs it.
dtls = "0.17.1"
webrtc-srtp = "0.17.1"
webrtc-ice = "0.17.1"
webrtc-util = "0.17.1"
async-trait = "0.1"

# rustls is a transitive dep of `dtls`, but we depend on it directly to
# install the `ring` `CryptoProvider` as the process-wide default before
# any DTLS handshake runs. Without that, downstream consumers (e.g.
# `lattice-server` + `lattice-desktop` in the same `cargo test
# --workspace` invocation) unify rustls features to include BOTH `ring`
# and `aws-lc-rs`, and rustls panics in `get_default()` when it can't
# auto-pick. See `crate::ensure_crypto_provider`.
rustls = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time", "test-util"] }
rand_chacha = "0.3"
tempfile = "3"

# ChaCha20-Poly1305 wrap on macOS / Linux for the secret-blob seal that
# wraps the OS-keychain-bound material. Workspace dep, just listed
# explicitly here so the cfg-gated impls compile.
chacha20poly1305 = { workspace = true }

# Windows-only deps for the DPAPI-backed keystore. windows = 0.58
# matches the version Tauri 2 already pulls in (verified via
# cargo tree -i windows), so feature unification stays a no-op.
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
] }

# Linux-only deps for the Secret Service keystore (G.2a).
# `secret-service` v4 talks D-Bus via the pure-Rust `zbus` stack — no
# C deps, cross-compile friendly. The crate is async-first; we run
# it on a dedicated single-threaded tokio runtime owned by the
# `LinuxKeystore` to keep the trait sync.
[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "4", default-features = false, features = ["rt-tokio-crypto-rust"] }

# macOS-only deps for the Secure-Enclave-backed Keychain keystore
# (G.2b). `security-framework` 3 covers SecKey + SecAccessControl.
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { version = "3", features = ["OSX_10_15"] }
security-framework-sys = "2"
core-foundation = "0.10"
