[package]
name = "lattice-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Wire schemas, framing, and envelope types for Lattice."

[lints]
workspace = true

[dependencies]
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_bytes.workspace = true
bytes.workspace = true
prost.workspace = true
prost-types.workspace = true
uuid.workspace = true
chrono.workspace = true

# Hybrid signature re-export per D-03; one-way dependency
# (lattice-crypto never imports lattice-protocol).
lattice-crypto = { path = "../lattice-crypto" }
