[package]
name = "lattice-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Wire schemas, framing, and envelope types for Lattice."

[lints]
workspace = true

[dependencies]
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_bytes.workspace = true
bytes.workspace = true
prost.workspace = true
prost-types.workspace = true
capnp.workspace = true
uuid.workspace = true
chrono.workspace = true

# Sealed-sender uses plain Ed25519 sign/verify per D-05 (Option B,
# 2026-05-10) over canonically-encoded transcript bytes. No
# Lattice-specific crypto primitive; direct dep on ed25519-dalek.
ed25519-dalek.workspace = true

# Hybrid signature re-export per D-03; one-way dependency
# (lattice-crypto never imports lattice-protocol).
lattice-crypto = { path = "../lattice-crypto" }

[build-dependencies]
capnpc.workspace = true

[dev-dependencies]
rand = { workspace = true }
rand_core = { workspace = true }
