[package]
name = "lattice-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Lattice home server — axum + quinn + Postgres."

[lints]
workspace = true

[[bin]]
name = "lattice-server"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
quinn.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
sqlx.workspace = true
config.workspace = true
dotenvy.workspace = true
uuid.workspace = true
chrono.workspace = true

lattice-crypto = { path = "../lattice-crypto" }
lattice-protocol = { path = "../lattice-protocol" }
lattice-storage = { path = "../lattice-storage" }
