[package]
name = "lattice-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Lattice home server — axum + quinn + Postgres."

[lints]
workspace = true

[[bin]]
name = "lattice-server"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
quinn.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
sqlx.workspace = true
config.workspace = true
dotenvy.workspace = true
uuid.workspace = true
chrono.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
rand_core.workspace = true
prost.workspace = true
subtle.workspace = true

# Federation client — server-to-server HTTP push.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

lattice-crypto = { path = "../lattice-crypto" }
lattice-protocol = { path = "../lattice-protocol" }
lattice-storage = { path = "../lattice-storage" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "test-util"] }
mls-rs.workspace = true
mls-rs-core.workspace = true
mls-rs-codec.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
